# glow-cloud

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
scripts/: cli.py  create_api_key.py  setup.py
sql/: 001_init.sql
src/: index.py  types.py
src/middleware/: auth.py
src/routes/: balance.py  health.py  keys.py  receive.py  send.py
src/services/: budget.py  db.py  sdk.py
tests/: conftest.py  test_keys.py
