[project]
name = "glow-cloud"
version = "0.1.0"
description = "Self-deployable Bitcoin/Lightning payment API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "breez-sdk-spark>=0.10.0",
    "asyncpg>=0.30.0",
    "mnemonic>=0.21",
    "qrcode>=7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
glow = "scripts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
